--- a/_includes/base.html
+++ b/_includes/base.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ '/style.css' | url }}" />
     <title>{{ title }}</title>
   </head>
-  <body>
+  <body class="h-screen antialiased">
     {{ content }}
   </body>
 </html>
