Add top footer margin

--- a/_includes/base.html
+++ b/_includes/base.html
@@ -39,7 +39,7 @@
 
     <main class="flex-1">{{ content }}</main>
 
-    <footer class="mx-auto px-8 container">
+    <footer class="mx-auto mt-10 px-8 container">
       <div class="py-8 border-t border-gray-200">
         <p class="font-medium">© Morsø Linux User Group</p>
       </div>
