Kalender side tilføjet

--- a/_includes/base.html
+++ b/_includes/base.html
@@ -23,6 +23,15 @@
                 Nyheder
               </a>
             </li>
+            
+            <li>
+              <a
+                href="{{ '/kalender' | url }}"
+                class="px-4 hover:underline font-medium text-blue-500"
+              >
+                Kalender
+              </a>
+            </li>
 
             <li>
               <a
