Add `.link` utility

--- a/_includes/base.html
+++ b/_includes/base.html
@@ -16,28 +16,19 @@
         <nav class="text-xl -mr-4">
           <ul class="flex">
             <li>
-              <a
-                href="{{ '/nyheder' | url }}"
-                class="px-4 hover:underline font-medium text-blue-500"
-              >
+              <a href="{{ '/nyheder' | url }}" class="px-4 font-medium link">
                 Nyheder
               </a>
             </li>
-            
+
             <li>
-              <a
-                href="{{ '/kalender' | url }}"
-                class="px-4 hover:underline font-medium text-blue-500"
-              >
+              <a href="{{ '/kalender' | url }}" class="px-4 font-medium link">
                 Kalender
               </a>
             </li>
 
             <li>
-              <a
-                href="{{ '/medlemmer' | url }}"
-                class="px-4 hover:underline font-medium text-blue-500"
-              >
+              <a href="{{ '/medlemmer' | url }}" class="px-4 font-medium link">
                 Medlemmer
               </a>
             </li>
