--- a/_includes/base.html
+++ b/_includes/base.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="default-src 'self'; img-src 'self' https://placehold.co"
+    />
     <link rel="stylesheet" href="{{ '/style.css' | url }}" />
     <title>{{ title }}</title>
   </head>
