--- a/_includes/base.html
+++ b/_includes/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src 'self' https://placehold.co"
+      content="default-src 'self'; img-src 'self' placehold.co"
     />
     <link rel="stylesheet" href="{{ '/style.css' | url }}" />
     <title>{{ title }}</title>
