--- a/_includes/base.html
+++ b/_includes/base.html
@@ -32,8 +32,8 @@
             </li>
 
             <li>
-              <a href="{{ '/medlemmer' | url }}" class="px-4 font-medium link">
-                Medlemmer
+              <a href="{{ '/kontakt' | url }}" class="px-4 font-medium link">
+                Kontakt
               </a>
             </li>
           </ul>
