Remove XL breakpoints and adjust index page

--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
+
 @plugin "@tailwindcss/typography";
+
+@theme {
+  --breakpoint-xl: initial;
+  --breakpoint-2xl: initial;
+}
 
 .link {
   @apply text-blue-500;
