--- a/_includes/base.html
+++ b/_includes/base.html
@@ -15,9 +15,10 @@
       <div class="flex mx-auto px-8 container">
         <a href="{{ '/' | url }}" class="flex flex-1">
           <span class="h-16">{% include 'logo' %}</span>
-          <span class="ml-4 font-light text-2xl self-center"
-            >Morsø Linux User Group</span
-          >
+
+          <span class="ml-4 font-light text-2xl self-center">
+            Morsø Linux User Group
+          </span>
         </a>
 
         <nav class="text-xl -mr-4 self-center">
