--- a/_includes/base.html
+++ b/_includes/base.html
@@ -14,7 +14,7 @@
     <header class="py-6">
       <div class="flex mx-auto px-8 container">
         <a href="{{ '/' | url }}" class="flex flex-1">
-          <span class="h-16">{% include 'logo' %}</span>
+          <span class="h-16">{% include 'logo.svg' %}</span>
 
           <span class="ml-4 font-light text-2xl self-center">
             Morsø Linux User Group
