--- a/_includes/base.html
+++ b/_includes/base.html
@@ -8,6 +8,7 @@
       content="default-src 'self'; img-src 'self' placehold.co"
     />
     <link rel="stylesheet" href="{{ '/style.css' | url }}" />
+    <link rel="icon" type="image/png" href="{{ '/favicon.png' | url }}" />
     <title>{{ title }}</title>
   </head>
   <body class="flex flex-col h-screen antialiased bg-white">
