--- a/_includes/base.html
+++ b/_includes/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src 'self' placehold.co github.com avatars.githubusercontent.com"
+      content="default-src 'self'; img-src 'self' placehold.co github.com avatars.githubusercontent.com upload.wikimedia.org"
     />
     <link rel="stylesheet" href="{{ '/style.css' | url }}" />
     <link rel="icon" type="image/png" href="{{ '/favicon.png' | url }}" />
