--- a/_includes/base.html
+++ b/_includes/base.html
@@ -13,7 +13,7 @@
   </head>
   <body class="flex flex-col h-screen antialiased bg-white">
     <header class="py-6">
-      <div class="flex mx-auto px-8 container">
+      <div class="flex flex-col md:flex-row mx-auto px-4 md:px-8 container">
         <a href="{{ '/' | url }}" class="flex flex-1">
           <span class="h-16">{% include 'logo.svg' %}</span>
 
@@ -22,7 +22,7 @@
           </span>
         </a>
 
-        <nav class="text-xl -mr-4 self-center">
+        <nav class="text-xl -mx-4 mt-4 md:mt-0 md:self-center">
           <ul class="flex">
             <li>
               <a href="{{ '/nyheder' | url }}" class="px-4 font-medium link">
@@ -48,7 +48,7 @@
 
     <main class="flex-1">{{ content }}</main>
 
-    <footer class="mx-auto mt-10 px-8 container">
+    <footer class="mx-auto mt-10 px-4 md:px-8 container">
       <div class="py-8 border-t border-gray-200">
         <p class="font-medium">© Morsø Linux User Group</p>
       </div>
